<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:icon="@drawable/ic_unselected_bottomnav_home"
        app:showAsAction="always"
        android:checked="true"
        android:checkable="true"
        android:enabled="true"
        android:title="@string/main_btm_nav_home_title" />

    <item
        android:id="@+id/menu_main_btm_nav_search"
        android:icon="@drawable/ic_unselected_bottomnav_search"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_search" />

    <item
        android:id="@+id/menu_main_btm_nav_regist"
        android:icon="@drawable/ic_unselected_bottomnav_regist"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_regist" />

    <item
        android:id="@+id/menu_main_btm_nav_chat"
        android:icon="@drawable/ic_unselected_bottomnav_chat"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_chat" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:icon="@drawable/ic_unselected_bottomnav_profile"
        app:showAsAction="always"
        android:enabled="true"
        android:title="@string/main_btm_nav_profile" />

</menu>

    <!-- https://github.com/daangn/karrot-ui-icon/tree/main/drawable
     당근마켓 아이콘 참조 -->