<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.main.myPage.EditUserDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_appbar"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_go_back"
            android:layout_width="24sp"
            android:layout_height="24sp"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/circle_ripple_effect"
            android:scaleType="centerCrop"
            android:src="@drawable/left_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_local_buying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginBottom="15sp"
            android:letterSpacing="-0.06"
            android:text="상점 소개 편집"
            android:textColor="@color/black"
            android:textSize="18.5sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_go_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_store_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@color/transparent"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15.5sp"
        android:textStyle="bold"
        android:maxLength="10"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck"
        app:layout_constraintTop_toBottomOf="@id/ll_appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.7sp"
        android:layout_margin="20sp"
        android:background="@color/lightgray"
        app:layout_constraintTop_toBottomOf="@id/et_store_id"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:text="@string/onlyText"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_store_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginTop="50sp"
        android:background="@color/transparent"
        android:gravity="top"
        android:hint="@string/introduceStore"
        android:letterSpacing="-0.03"
        android:lineSpacingExtra="3sp"
        android:textColor="@color/black"
        android:textColorHint="@color/lightgray"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cl_bottom_section"
        android:layout_marginBottom="15sp"
        tools:layout_editor_absoluteY="624dp">

        <TextView
            android:id="@+id/tv_text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/lightgray"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textColor="@color/lightgray"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textColor="@color/lightgray"
            android:textSize="12dp"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_bottom_section"
        android:layout_width="match_parent"
        android:layout_height="115sp"
        android:background="@drawable/btnmore_radius_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_margin="20sp"
            android:background="@drawable/btn_radius_red"
            android:text="적용하기"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_regist_pay">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_buy_fast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:text="통신판매업자는 판매자 정보를 등록해주세요"
                android:textColor="@color/lightgray"
                android:textSize="11sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>